panel z-index fix

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3343,7 +3343,9 @@ h1,h2,h3,h4,p,ul {
   background-color: #ffffff;
 }
 
-
+.slideout-menu {
+  z-index: 1;
+}
 
 
 
